Added initial styles, updated markup.

--- a/index.html
+++ b/index.html
@@ -4,8 +4,31 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Scott Marshall</title>
+  <link rel="stylesheet" href="styles.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 </head>
 <body>
-  Hello world!
+  <div class="container">
+    <main>
+      <h1>Hi, <b>I'm Scott</b>, a Front End Developer who specializes in creating and customizing Shopify themes.</h1>
+
+      <div class="cv__row">
+        <h2>Work Experience</h2>
+        <h3>Intermediate Developer</h3>
+        <h4>Pixel Union</h4>
+        <p>2019 - Present</p>
+      </div>
+
+      <div class="cv__row">
+        <h2>Education</h2>
+        <h3>Interactive Multimedia Developer</h3>
+        <h4>Algonquin College</h4>
+        <p>2014 - 2016</p>
+      </div>
+    </main>
+    <aside></aside>
+  </div>
 </body>
 </html>
