--- a/index.html
+++ b/index.html
@@ -10,22 +10,30 @@
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 </head>
 <body>
-  <div class="container">
+  <a class="cv-button" href="#projects">My projects</a>
+
+  <div class="cv">
     <main>
-      <h1>Hi, <b>I'm Scott</b>, a Front End Developer who specializes in creating and customizing Shopify themes.</h1>
+      <h1 class="cv__heading">
+        Hi, <b>I'm Scott</b>, a Front End Developer who specializes in creating and customizing Shopify themes.
+      </h1>
 
       <div class="cv__row">
-        <h2>Work Experience</h2>
-        <h3>Intermediate Developer</h3>
-        <h4>Pixel Union</h4>
-        <p>2019 - Present</p>
+        <h2 class="cv__row-heading">Work Experience</h2>
+        <h3 class="cv__row-position">Intermediate Developer</h3>
+        <h4 class="cv__row-organization">Pixel Union</h4>
+        <p class="cv__row-date">2019 - Present</p>
       </div>
 
       <div class="cv__row">
-        <h2>Education</h2>
-        <h3>Interactive Multimedia Developer</h3>
-        <h4>Algonquin College</h4>
-        <p>2014 - 2016</p>
+        <h2 class="cv__row-heading">Education</h2>
+        <h3 class="cv__row-position">Interactive Multimedia Developer</h3>
+        <h4 class="cv__row-organization">Algonquin College</h4>
+        <p class="cv__row-date">2014 - 2016</p>
+      </div>
+
+      <div class="cv__row">
+        <h2 id="projects" class="cv__row-heading">Projects</h2>
       </div>
     </main>
     <aside></aside>
