--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Scott Marshall</title>
+  <title>Scott Marshall - Front End Developer</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,26 +14,47 @@
 
   <div class="cv">
     <main>
-      <h1 class="cv__heading">
+      <h1 class="cv__title">
         Hi, <b>I'm Scott</b>, a Front End Developer who specializes in creating and customizing Shopify themes.
       </h1>
 
-      <div class="cv__row">
-        <h2 class="cv__row-heading">Work Experience</h2>
-        <h3 class="cv__row-position">Intermediate Developer</h3>
-        <h4 class="cv__row-organization">Pixel Union</h4>
-        <p class="cv__row-date">2019 - Present</p>
+      <div class="cv__header">
+        <h2 class="cv__heading">Work Experience</h2>
       </div>
 
       <div class="cv__row">
-        <h2 class="cv__row-heading">Education</h2>
-        <h3 class="cv__row-position">Interactive Multimedia Developer</h3>
-        <h4 class="cv__row-organization">Algonquin College</h4>
-        <p class="cv__row-date">2014 - 2016</p>
+        <div class="cv__item">
+          <div class="cv__indicator cv__indicator--present">
+            <div class="indicator__inner"></div>
+          </div>
+          <h3 class="cv__position">Intermediate Developer</h3>
+          <h4 class="cv__row-organization">Pixel Union</h4>
+          <p class="cv__date">2019 - Present</p>
+        </div>
+
+        <div class="cv__item">
+          <div class="cv__indicator">
+            <div class="indicator__inner"></div>
+          </div>
+          <h3 class="cv__position">Front End Developer</h3>
+          <h4 class="cv__row-organization">Out of the Sandbox</h4>
+          <p class="cv__date">2015 - 2019</p>
+        </div>
+      </div>
+
+      <div class="cv__header">
+        <h2 class="cv__heading">Education</h2>
       </div>
 
       <div class="cv__row">
-        <h2 id="projects" class="cv__row-heading">Projects</h2>
+        <div class="cv__item">
+          <div class="cv__indicator">
+            <div class="indicator__inner"></div>
+          </div>
+          <h3 class="cv__position">Interactive Multimedia Developer</h3>
+          <h4 class="cv__row-organization">Algonquin College</h4>
+          <p class="cv__date">2014 - 2016</p>
+        </div>
       </div>
     </main>
     <aside></aside>
