--- a/index.html
+++ b/index.html
@@ -10,13 +10,17 @@
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 </head>
 <body>
-  <a class="cv__button" href="">Hire Me</a>
+  <div class="cv__button-container">
+    <a class="cv__button" href="">Hire Me</a>
+  </div>
 
   <div class="cv">
     <main>
       <h1 class="cv__title">
         Hi, <b>I'm Scott</b>, a Front End Developer who specializes in creating and customizing Shopify themes.
       </h1>
+
+      <p class="test">I find my passion in the subtle art of minimalism, the finesse of typography, and the power of contrast.</p>
 
       <div class="cv__header">
         <h2 id="work-experience" class="cv__heading">Work Experience</h2>
@@ -28,7 +32,7 @@
             <div class="cv__indicator-inner"></div>
           </div>
 
-          <h3 class="cv__position">Intermediate Developer</h3>
+          <h3 class="cv__position"><b>Intermediate Developer</b></h3>
           <h4 class="cv__row-organization">Pixel Union</h4>
           <p class="cv__date">2019 - Present</p>
         </div>
