--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 </head>
+
 <body>
-  <header>
+  <header class="header">
     <div class="header__container">
       <div class="header__column">
         <?xml version="1.0" encoding="UTF-8"?>
@@ -30,57 +31,30 @@
         </g>
         </svg>
       </div>
+      <div class="header__column header__column--actions">
+        <button class="header__button">
+          <svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path id="Vector" d="M6.25 21.25H23.75M6.25 15H23.75M6.25 8.75H23.75" stroke="black" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+          </svg>            
+        </button>
+        <button class="header__button">
+          <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <g id="Environment / Sun">
+            <path id="Vector" d="M12 4V2M12 20V22M6.41421 6.41421L5 5M17.728 17.728L19.1422 19.1422M4 12H2M20 12H22M17.7285 6.41421L19.1427 5M6.4147 17.728L5.00049 19.1422M12 17C9.23858 17 7 14.7614 7 12C7 9.23858 9.23858 7 12 7C14.7614 7 17 9.23858 17 12C17 14.7614 14.7614 17 12 17Z" stroke="black" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+            </g>
+            </svg>
+            
+        </button>
+      </div>
     </div>
   </header>
 
-  <main>
-    <h1 class="heading">Hi, <span>I'm Scott</span>, a Front End Developer who specializes in creating and customizing Shopify themes.</h1>
-
-    <div class="section">
-      <h2 id="work-experience" class="section__heading">Work Experience</h2>
-      <div class="section__card">
-        <div class="section__card-content">
-          <div class="cv__indicator cv__indicator--present">
-            <div class="cv__indicator-inner"></div>
-          </div>
-          <h3 class="cv__position">Intermediate Developer</h3>
-          <h4 class="cv__row-organization">Pixel Union</h4>
-          <p class="cv__date">2019 - Present</p>
-        </div>
-
-        <div class="section__card-content">
-          <div class="cv__indicator">
-            <div class="cv__indicator-inner"></div>
-          </div>
-          <h3 class="cv__position">Front End Developer</h3>
-          <h4 class="cv__row-organization">Out of the Sandbox</h4>
-          <p class="cv__date">2015 - 2019</p>
-        </div>
-
-        <div class="section__card-content">
-          <div class="cv__indicator">
-            <div class="cv__indicator-inner"></div>
-          </div>
-          <h3 class="cv__position">Web Designer</h3>
-          <h4 class="cv__row-organization">Guides.co</h4>
-          <p class="cv__date">2014 - 2015</p>
-        </div>
-      </div>
+  <section class="banner">
+    <div class="banner__content"> 
+      <h1 class="banner__heading">Hi, <span>I'm Scott</span>, a Front End Developer who specializes in creating and customizing Shopify themes.</h1>
+      <p class="banner__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae sint saepe aliquam quibusdam eius laudantium.</p>
+      <a class="banner__button" href="#">Hire Me</a>
     </div>
-
-    <div class="section">
-      <h2 id="education" class="section__heading">Education</h2>
-      <div class="section__card">
-        <div class="section__card-content">
-          <div class="cv__indicator">
-            <div class="cv__indicator-inner"></div>
-          </div>
-          <h3 class="cv__position">Interactive Multimedia Developer</h3>
-          <h4 class="cv__row-organization">Algonquin College</h4>
-          <p class="cv__date">2014 - 2016</p>
-        </div>
-      </div>
-    </div>
-  </main>
+  </section>
 </body>
 </html>
