--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   <script>
     const toggleButton = document.querySelector('[data-toggle]');
     toggleButton.addEventListener('click', function() {
-      document.body.classList.toggle('dark-mode');
+      document.body.classList.toggle('light-mode');
     });
   </script>
 </body>
