--- a/index.html
+++ b/index.html
@@ -8,114 +8,103 @@
 </head>
 
 <body>
-  <nav data-nav>
-    <ul>
-      <li>
-        <a href="#">CV</a>
-      </li>
-      <li>
-        <a href="#">Themes</a>
-      </li>
-      <li>
-        <a href="#">Contact</a>
-      </li>
-    </ul>
-  </nav>
+
   <header class="header">
-    <div class="header__container">
-      <div class="header__column">
-        <svg class="header__logo" width="25px" height="25px" viewBox="0 0 166 167" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-        <defs>
-        <path d="M116,16 L180.68272,16 L180.68272,80.6827202 L116,16 Z" id="path-1"></path>
-        </defs>
-        <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-        <g transform="translate(-16.000000, -16.000000)">
-        <rect fill="currentColor" transform="translate(99.000000, 99.000000) rotate(-45.000000) translate(-99.000000, -99.000000) " x="59" y="-1" width="80" height="200" rx="40"></rect>
-        <g>
-        <use fill="currentColor" fill-rule="evenodd" xlink:href="#path-1"></use>
-        <path stroke="currentColor" stroke-width="1" d="M117.207107,16.5 L180.18272,79.4756134 L180.18272,16.5 L117.207107,16.5 Z"></path>
-        </g>
-        <path d="M16.3574219,117.705078 L81.040142,117.705078 L81.040142,182.387798 L16.3574219,117.705078 Z" id="Combined-Shape" fill="currentColor" transform="translate(48.698782, 150.046438) rotate(-180.000000) translate(-48.698782, -150.046438) "></path>
-        </g>
-        </g>
+    <div class="header__column">
+      <a class="header__logo" href="index.html">
+        <svg
+          width="25"
+          height="25"
+          viewBox="0 0 166 167"
+          version="1.1"
+          xmlns="http://www.w3.org/2000/svg"
+          xmlns:xlink="http://www.w3.org/1999/xlink"
+        >
+          <defs>
+            <path
+              d="M116,16 L180.68272,16 L180.68272,80.6827202 L116,16 Z"
+              id="path-1"
+            >
+            </path>
+          </defs>
+
+          <g
+            stroke="none"
+            stroke-width="1"
+            fill="none"
+            fill-rule="evenodd"
+          >
+            <g transform="translate(-16.000000, -16.000000)">
+              <rect
+                fill="currentColor"
+                transform="translate(99.000000, 99.000000) rotate(-45.000000) translate(-99.000000, -99.000000)"
+                x="59"
+                y="-1"
+                width="80"
+                height="200"
+                rx="40"
+              >
+              </rect>
+
+              <g>
+                <use
+                  fill="currentColor"
+                  fill-rule="evenodd"
+                  xlink:href="#path-1">
+                </use>
+                <path
+                  stroke="currentColor"
+                  stroke-width="1"
+                  d="M117.207107,16.5 L180.18272,79.4756134 L180.18272,16.5 L117.207107,16.5 Z">
+                </path>
+              </g>
+
+              <path
+                d="M16.3574219,117.705078 L81.040142,117.705078 L81.040142,182.387798 L16.3574219,117.705078 Z"
+                id="Combined-Shape"
+                fill="currentColor"
+                transform="translate(48.698782, 150.046438) rotate(-180.000000) translate(-48.698782, -150.046438) ">
+              </path>
+            </g>
+          </g>
         </svg>
-      </div>
+      </a>
+    </div>
 
-      <div 
-        class="
-          header__column 
-          header__column--actions
-        "
-      >
-        <button 
-          class="
-            header__button 
-            header__button--toggle
-          "
-          aria-label="Light mode"
-          data-light-mode
-        >
-          <svg 
-            width="22" 
-            height="22" 
-            viewBox="0 0 22 22" 
-            xmlns="http://www.w3.org/2000/svg"
-          >
-            <path 
-              d="M8.25 5.49992C8.25 10.0563 11.9437 13.7499 16.5 13.7499C17.3335 13.7499 18.1381 13.6266 18.8965 13.3968C17.8698 16.7843 14.7229 19.2498 11 19.2498C6.44365 19.2498 2.75 15.5564 2.75 11C2.75 7.27718 5.2159 4.13026 8.60347 3.10352C8.3736 3.86194 8.25 4.66643 8.25 5.49992Z" 
-              stroke-width="2" 
-              stroke-linecap="round" 
-              stroke-linejoin="round"
-            />
-          </svg>
-        </button>
-
-        <button 
-          class="
-            header__button 
-            header__button--menu
-          " 
-          aria-label="Menu"
-          data-menu
-        >
-          <svg 
-            width="30" 
-            height="30" 
-            viewBox="0 0 30 30" 
-            fill="none" 
-            xmlns="http://www.w3.org/2000/svg"
-          >
-            <path 
-              d="M6.25 21.25H23.75M6.25 15H23.75M6.25 8.75H23.75" 
-              stroke-width="2" 
-              stroke-linecap="round" 
-              stroke-linejoin="round"
-            />
-          </svg>            
-        </button>
-      </div>
+    <div class="header__column header__column--actions">
+      <button class="header__button header__button--mode" data-mode>
+        <svg width="30" height="30" viewBox="0 0 25 25" xmlns="http://www.w3.org/2000/svg">
+          <path fill-rule="evenodd" clip-rule="evenodd" d="M21.9955 12.7115C21.3631 12.8992 20.6933 13 20 13C16.134 13 13 9.86599 13 6C13 5.30669 13.1008 4.63691 13.2885 4.00454C13.1927 4.00152 13.0965 4 13 4C8.02944 4 4 8.02944 4 13C4 17.9706 8.02944 22 13 22C17.9706 22 22 17.9706 22 13C22 12.9035 21.9985 12.8073 21.9955 12.7115Z"/>
+          <path d="M21.9955 12.7115L22.995 12.68C22.9852 12.3701 22.8322 12.0822 22.5809 11.9007C22.3295 11.7192 22.0081 11.6646 21.7109 11.7528L21.9955 12.7115ZM13.2885 4.00454L14.2472 4.28913C14.3354 3.99189 14.2808 3.67053 14.0993 3.41915C13.9178 3.16776 13.6299 3.01479 13.32 3.00503L13.2885 4.00454ZM21.7109 11.7528C21.1699 11.9134 20.5959 12 20 12V14C20.7907 14 21.5563 13.885 22.2801 13.6701L21.7109 11.7528ZM20 12C16.6863 12 14 9.31371 14 6H12C12 10.4183 15.5817 14 20 14V12ZM14 6C14 5.40407 14.0866 4.83011 14.2472 4.28913L12.3299 3.71994C12.115 4.44371 12 5.20931 12 6H14ZM13 5C13.086 5 13.1717 5.00135 13.2571 5.00404L13.32 3.00503C13.2137 3.00169 13.107 3 13 3V5ZM5 13C5 8.58172 8.58172 5 13 5V3C7.47715 3 3 7.47715 3 13H5ZM13 21C8.58172 21 5 17.4183 5 13H3C3 18.5228 7.47715 23 13 23V21ZM21 13C21 17.4183 17.4183 21 13 21V23C18.5228 23 23 18.5228 23 13H21ZM20.996 12.7429C20.9986 12.8283 21 12.914 21 13H23C23 12.893 22.9983 12.7863 22.995 12.68L20.996 12.7429Z"/>
+        </svg>
+      </button>
     </div>
   </header>
 
-  <section class="banner">
-    <div class="banner__content"> 
-      <h1 class="banner__heading">Hi, <span>I'm Scott</span>, a Front End Developer who specializes in creating and customizing Shopify themes.</h1>
-      <p class="banner__text">I strive to deliver immersive product experiences through intuitive design.</p>
-      <a class="banner__button" href="#">Work with me</a>
+  <section class="hero">
+    <div class="hero__content">
+      <h1 class="hero__heading">Hi, <span>I'm Scott</span>, a Front End Developer specializing in creating and customizing Shopify themes.</h1>
+
+      <div class="hero__text">
+        <div class="hero__text-accent"></div>
+        <p class="hero__subheading">I strive to deliver immersive product experiences through intuitive design.</p>
+      </div>
+
+      <a href="#" class="hero__button">
+        <span>Start a project</span>
+        <svg width="14" height="14" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path d="M15 8L1 8" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+          <path d="M8 15L15 8L8 0.999999" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+        </svg>
+      </a>
     </div>
   </section>
 
   <script>
-    const toggleButton = document.querySelector('[data-light-mode]');
-    const menuToggle = document.querySelector('[data-menu]');
-    const nav = document.querySelector('[data-nav]');
+    const mode = document.querySelector('[data-mode]');
 
-    toggleButton.addEventListener('click', function() {
-      document.body.classList.toggle('light-mode');
-    });
-
-    menuToggle.addEventListener('click', function() {
-      nav.classList.toggle('nav--active');
+    mode.addEventListener('click', function() {
+      document.body.classList.toggle('dark-mode');
     });
   </script>
 </body>
