--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <h1 class="hero__heading">Scott Marshall</h1>
             <h2 class="hero__text">Front-End Developer</h2>
           </div>
+          <img class="hero__image" src="assets/scott.png" alt="Scott Marshall">
         </div>
       </div>
     </section>
@@ -43,7 +44,7 @@
           <div class="article__header">
             <h3 class="article__heading">Intermediate Developer</h3>
             <h4 class="article__subheading">
-              <a href="">Pixel Union</a>
+              <a href="https://pixelunion.net/" target="_blank">Pixel Union</a>
             </h4>
           </div>
           <p class="article__date">
@@ -57,7 +58,7 @@
           <div class="article__header">
             <h3 class="article__heading">Intermediate Web Developer / Technical Support Supervisor</h3>
             <h4 class="article__subheading">
-              <a href="">Out of the Sandbox</a>
+              <a href="https://outofthesandbox.com/" target="_blank">Out of the Sandbox</a>
             </h4>
           </div>
           <p class="article__date">
