--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Scott Marshall is a Front-End Developer with over 10 years of experience in immersive front-end experiences and custom Shopify themes.">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles/styles.css">
 </head>
 
@@ -19,6 +19,7 @@
           <div class="hero__content">
             <h1 class="hero__heading">Scott Marshall</h1>
             <h2 class="hero__text">Front-End Developer</h2>
+            <a href="" class="button button--primary">Start A Project</a>
           </div>
           <img class="hero__image" src="assets/scott.png" alt="Scott Marshall">
         </div>
@@ -31,7 +32,7 @@
       </div>
     </section>
 
-    <section class="section section--padded">
+    <section class="section">
       <div class="section__container">
         <div class="divider"></div>
       </div>
@@ -49,7 +50,12 @@
           </div>
           <p class="article__date">
             <span class="article__date-item">Jul. 2019</span>
-            <span class="article__date-item">-</span>
+            <span class="article__date-item article__date-item--separator">
+              <svg width="18" height="18" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M14.4301 5.92993L20.5001 11.9999L14.4301 18.0699" stroke="currentColor" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+                <path d="M3.5 12H20.33" stroke="currentColor" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+              </svg>
+            </span>
             <span class="article__date-item">Oct. 2024</span>
           </p>
         </article>
@@ -63,7 +69,12 @@
           </div>
           <p class="article__date">
             <span class="article__date-item">Mar. 2016</span>
-            <span class="article__date-item">-</span>
+            <span class="article__date-item article__date-item--separator">
+              <svg width="18" height="18" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M14.4301 5.92993L20.5001 11.9999L14.4301 18.0699" stroke="currentColor" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+                <path d="M3.5 12H20.33" stroke="currentColor" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+              </svg>
+            </span>
             <span class="article__date-item">Jul. 2019</span>
           </p>
         </article>
@@ -77,12 +88,17 @@
           <div class="article__header">
             <h3 class="article__heading">Interactive Multimedia Developer</h3>
             <h4 class="article__subheading">
-              <a href="">Algonquin College</a>
+              <a href="https://www.algonquincollege.com/" target="_blank">Algonquin College</a>
             </h4>
           </div>
           <p class="article__date">
             <span class="article__date-item">Mar. 2016</span>
-            <span class="article__date-item">-</span>
+            <span class="article__date-item article__date-item--separator">
+              <svg width="18" height="18" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M14.4301 5.92993L20.5001 11.9999L14.4301 18.0699" stroke="currentColor" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+                <path d="M3.5 12H20.33" stroke="currentColor" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+              </svg>
+            </span>
             <span class="article__date-item">Jul. 2019</span>
           </p>
         </article>
@@ -97,9 +113,17 @@
   </main>
 
   <footer class="footer">
-    <p class="footer__text">Let's create something great.</p>
-    <a class="footer__link" href="mailto:scottmarshall993@gmail.com" target="_blank">scottmarshall993@gmail.com</a>
-    <a class="footer__button button" href="" download>Download CV</a>
+    <div class="footer__promotion">
+      <p class="footer__text">Let's create something great.</p>
+      <a class="footer__link" href="mailto:scottmarshall993@gmail.com" target="_blank">scottmarshall993@gmail.com</a>
+      <a class="footer__button button button--secondary" href="" download>Download CV</a>
+    </div>
+
+    <div class="footer__meta">
+      <span class="footer__meta-item">© 2024 <a href="index.html">Scott Marshall</a></span>
+      <span class="footer__meta-item">Available for Hire</span>
+      <span class="footer__meta-item">Crafted with Love</span>
+    </div>
   </footer>
 </body>
 </html>
