--- a/index.html
+++ b/index.html
@@ -7,11 +7,36 @@
   <meta name="description" content="Scott Marshall is a Front-End Developer with over 10 years of experience in immersive front-end experiences and custom Shopify themes.">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="icon" type="image/png" href="assets/scott-marshall-favicon.png" sizes="16x16">
   <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles/styles.css">
 </head>
 
 <body>
+  <header class="header">
+    <div class="header__wrapper">
+      <a class="header__brand" href="index.html">
+        <img class="header__brand-image" src="assets/scott-marshall-brand.png" alt="Scott Marshall">
+      </a>
+      <ul class="header__menu">
+        <li><a class="header__link" href="#experience">Experience</a></li>
+        <li><a class="header__link" href="#education">Education</a></li>
+      </ul>
+      <ul class="header__actions">
+        <li>
+          <button>
+            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M3 7H21" stroke="white" stroke-width="1.5" stroke-linecap="round"/>
+              <path d="M3 12H21" stroke="white" stroke-width="1.5" stroke-linecap="round"/>
+              <path d="M3 17H21" stroke="white" stroke-width="1.5" stroke-linecap="round"/>
+              </svg>
+
+          </button>
+        </li>
+      </ul>
+    </div>
+  </header>
+
   <main>
     <section class="section">
       <div class="section__container">
@@ -21,7 +46,7 @@
             <h2 class="hero__text">Front-End Developer</h2>
             <a href="" class="button button--primary">Start A Project</a>
           </div>
-          <img class="hero__image" src="assets/scott.png" alt="Scott Marshall">
+          <img class="hero__image" src="assets/scott-marshall-hero.png" alt="Scott Marshall">
         </div>
       </div>
     </section>
@@ -40,7 +65,7 @@
 
     <section class="section section--padded">
       <div class="section__container">
-        <h2 class="section__heading">Experience</h2>
+        <h2 id="experience" class="section__heading">Experience</h2>
         <article>
           <div class="article__header">
             <h3 class="article__heading">Intermediate Developer</h3>
@@ -83,7 +108,7 @@
 
     <section class="section section--padded">
       <div class="section__container">
-        <h2 class="section__heading">Education</h2>
+        <h2 id="education" class="section__heading">Education</h2>
         <article>
           <div class="article__header">
             <h3 class="article__heading">Interactive Multimedia Developer</h3>
@@ -92,14 +117,14 @@
             </h4>
           </div>
           <p class="article__date">
-            <span class="article__date-item">Mar. 2016</span>
+            <span class="article__date-item">Jun. 2012</span>
             <span class="article__date-item article__date-item--separator">
               <svg width="18" height="18" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M14.4301 5.92993L20.5001 11.9999L14.4301 18.0699" stroke="currentColor" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
                 <path d="M3.5 12H20.33" stroke="currentColor" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
               </svg>
             </span>
-            <span class="article__date-item">Jul. 2019</span>
+            <span class="article__date-item">Jun. 2014</span>
           </p>
         </article>
       </div>
