--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
   <header class="header">
-    <div class="header__wrapper">
+    <div class="header__wrapper container">
       <a class="header__brand" href="index.html">
         <img class="header__brand-image" src="assets/scott-marshall-brand.png" alt="Scott Marshall">
       </a>
@@ -138,16 +138,17 @@
   </main>
 
   <footer class="footer">
-    <div class="footer__promotion">
-      <p class="footer__text">Let's create something great.</p>
-      <a class="footer__link" href="mailto:scottmarshall993@gmail.com" target="_blank">scottmarshall993@gmail.com</a>
-      <a class="footer__button button button--secondary" href="" download>Download CV</a>
-    </div>
+    <div class="container container--wide">
+      <div class="footer__content">
+        <p class="footer__text">Let's create something great.</p>
+        <a class="footer__link" href="mailto:scottmarshall993@gmail.com" target="_blank">scottmarshall993@gmail.com</a>
+        <a class="footer__button button button--secondary" href="" download>Download CV</a>
+      </div>
 
-    <div class="footer__meta">
-      <span class="footer__meta-item">© 2024 <a href="index.html">Scott Marshall</a></span>
-      <span class="footer__meta-item">Available for Hire</span>
-      <span class="footer__meta-item">Crafted with Love</span>
+      <div class="footer__meta">
+        <span class="footer__meta-item">© 2024 <a href="index.html">Scott Marshall</a></span>
+        <span class="footer__meta-item">Available for Hire</span>
+      </div>
     </div>
   </footer>
 </body>
