--- a/index.html
+++ b/index.html
@@ -12,16 +12,19 @@
   <link rel="stylesheet" href="styles/styles.css">
 </head>
 
-<body>
+<body id="main">
   <header class="header">
     <div class="header__wrapper container">
       <a class="header__brand" href="index.html">
         <img class="header__brand-image" src="assets/scott-marshall-brand.png" alt="Scott Marshall">
       </a>
+
       <ul class="header__menu">
+        <li><a class="header__link" href="#main">About</a></li>
         <li><a class="header__link" href="#experience">Experience</a></li>
         <li><a class="header__link" href="#education">Education</a></li>
       </ul>
+
       <ul class="header__actions">
         <li>
           <button>
@@ -44,7 +47,7 @@
           <div class="hero__content">
             <h1 class="hero__heading">Scott Marshall</h1>
             <h2 class="hero__text">Front-End Developer</h2>
-            <a href="" class="button button--primary">Start A Project</a>
+            <a class="button button--primary" href="mailto:scottmarshall993@gmail.com" target="_blank">Start A Project</a>
           </div>
           <img class="hero__image" src="assets/scott-marshall-hero.png" alt="Scott Marshall">
         </div>
@@ -142,7 +145,7 @@
       <div class="footer__content">
         <p class="footer__text">Let's create something great.</p>
         <a class="footer__link" href="mailto:scottmarshall993@gmail.com" target="_blank">scottmarshall993@gmail.com</a>
-        <a class="footer__button button button--secondary" href="" download>Download CV</a>
+        <a class="footer__button button button--secondary" href="assets/scott-marshall.pdf" download>Download CV</a>
       </div>
 
       <div class="footer__meta">
