Updated resume PDF.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
         <li><a class="header__link" href="#main">About</a></li>
         <li><a class="header__link" href="#experience">Experience</a></li>
         <li><a class="header__link" href="#education">Education</a></li>
-        <li>
+        <li><a class="header__link" href="#contact">Contact</a></li>
+        <!-- <li>
           <a class="header__link header__link--has-icon" href="https://github.com/marshall993" target="_blank">
             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
               <g clip-path="url(#clip0_7_374)">
@@ -68,7 +69,7 @@
               </defs>
             </svg>              
           </a>
-        </li>
+        </li> -->
       </ul>
 
       <ul class="header__actions">
@@ -175,6 +176,37 @@
             <span class="article__date-item">Jun. 2014</span>
           </p>
         </article>
+      </div>
+    </section>
+
+    <section class="section section--padded">
+      <div class="section__container">
+        <div class="divider"></div>
+      </div>
+    </section>
+
+    <section class="section">
+      <div class="section__container">
+        <form class="contact-form" id="contact-form">
+          <div class="contact-form__field">
+            <input class="contact-form__input" type="text" name="user_name" placeholder="Name">
+            <label class="contact-form__label">Name</label>
+          </div>
+
+          <div class="contact-form__field">
+            <input class="contact-form__input" type="email" name="user_email">
+            <label class="contact-form__label">Email</label>
+          </div>
+
+          <div class="contact-form__field">
+            <textarea class="contact-form__input" name="message"></textarea>
+            <label class="contact-form__label">Message</label>
+          </div>
+
+          <div class="contact-form__field">
+            <input class="button button--primary" type="submit" value="Submit">
+          </div>
+        </form>
       </div>
     </section>
 
